--- a/site/templates/twig/code-tables/msa/sysop/form/field-type.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/field-type.twig
@@ -25,7 +25,8 @@
 						'value': code.beforedecimal,
 						'attributes': {
 							'max': sysop.fieldAttribute('beforedecimal', 'max'),
-						}
+						},
+						'addclasses': ['text-right']
 					}
 				}
 			%}
@@ -41,7 +42,8 @@
 						'value': code.afterdecimal,
 						'attributes': {
 							'max': sysop.fieldAttribute('afterdecimal', 'max'),
-						}
+						},
+						'addclasses': ['text-right']
 					}
 				}
 			%}
