--- a/site/templates/twig/code-tables/msa/sysop/form/field-type.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/field-type.twig
@@ -25,7 +25,7 @@
 						'value': code.beforedecimal,
 						'attributes': {
 							'max': sysop.fieldAttribute('beforedecimal', 'max'),
-							'disabled': code.isNumeric() == false
+							'readonly': code.isNumeric() == false
 						},
 						'addclasses': ['text-right']
 					}
@@ -43,7 +43,7 @@
 						'value': code.afterdecimal,
 						'attributes': {
 							'max': sysop.fieldAttribute('afterdecimal', 'max'),
-							'disabled': code.isNumeric() == false
+							'readonly': code.isNumeric() == false
 						},
 						'addclasses': ['text-right']
 					}
