--- a/site/templates/twig/code-tables/msa/sysop/form/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/js/classes/Form.js.twig
@@ -12,7 +12,18 @@ class SysopForm {
 		this.id = 'code-form';
 		this.form = $('#' + this.id);
 		this.inputs = SysopInputs.getInstance();
-		this.config = SysopConfigs.getInstance();
+		this.config = SysopConfig.getInstance();
+	}
+
+	enableDisableDecimalFields() {
+		if (this.inputs.fieldtype.val() == 'N') {
+			this.inputs.afterdecimal.removeAttr('readonly');
+			this.inputs.beforedecimal.removeAttr('readonly');
+			return true;
+		}
+		this.inputs.afterdecimal.attr('readonly', 'true');
+		this.inputs.beforedecimal.attr('readonly', true);
+		return false;
 	}
 
 	updateInputsFromJson(json = null) {
