--- a/site/templates/twig/code-tables/msa/sysop/form/js/classes/Config.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/js/classes/Config.js.twig
@@ -17,5 +17,6 @@ class SysopConfig {
 				maxlength: {{ sysop.fieldAttribute('description', 'maxlength') }}
 			},
 		};
+		this.keyDelimiter = '{{ sysop.recordlocker.glue() }}';
 	}
 }
