--- a/site/templates/twig/code-tables/msa/sysop/form/.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/.js.twig
@@ -3,8 +3,77 @@
 $(function() {
 	let formSysop = SysopForm.getInstance();
 
+/* =============================================================
+	Event Functions
+============================================================= */
 	$("body").on("change", "select[name=fieldtype]", function(e) {
 		var input = $(this);
 		formSysop.enableDisableDecimalFields();
+	});
+
+/* =============================================================
+	Validation Functions
+============================================================= */
+	let validator = formSysop.form.validate({
+		errorClass: "is-invalid",
+		validClass: "is-valid",
+		errorPlacement: function(error, element) {
+			error.insertAfter(element).addClass('invalid-feedback');
+		},
+		rules: {
+			code: {
+				required: true,
+				maxlength: formSysop.config.fields.code.maxlength,
+				remote: {
+					url: '{{ page.jsonApiUrl('msa/validate/sysop/') }}',
+					type: "get",
+					data: {
+						jqv: 'true',
+						new: function() {
+							return formSysop.inputs.form.attr('data-code') == $('#code').val() ? 'false' : 'true';
+						},
+					}
+				}
+			},
+			description: {
+				maxlength: formSysop.config.fields.description.maxlength,
+			}
+		},
+		submitHandler: function(form) {
+			var formSysop = SysopForm.getInstance();
+			var server   = SysopRequests.getInstance();
+			var code = formSysop.inputs.code.val();
+
+			// if (formSysop.inputs.form.attr('data-code') == code) {
+			// 	form.submit();
+			// } else {
+			// 	server.validateCode(code, function(exists) {
+			// 		var alert = CodeAlerts.getInstance();
+			// 		if (exists === false) {
+			// 			form.submit();
+			// 			return true;
+			// 		}
+			//
+			// 		alert.codeExists(code, function(editCode) {
+			// 			if (editCode) {
+			// 				var modal = formSysop.form.closest('.modal');
+			//
+			// 				if (editCode) {
+			// 					server.getCode(code, function(response) {
+			// 						if (response) {
+			// 							modal.find('.modal-title').text('Edit Code ' + code);
+			// 							formSysop.updateInputsFromJson(response);
+			// 						}
+			// 					});
+			// 				} else {
+			// 					modal.modal('hide');
+			// 				}
+			// 			} else {
+			// 				form.submit();
+			// 			}
+			// 		});
+			// 	});
+			// }
+		}
 	});
 });
