--- a/site/templates/twig/code-tables/msa/sysop/form.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form.twig
@@ -40,8 +40,10 @@
 								'input': {
 									'name': 'notecode',
 									'value': code.notecode,
+									'lowercase': true,
 									'attributes': {
 										'maxlength': sysop.fieldAttribute('notecode', 'maxlength'),
+										'data-notecode': code.notecode
 									},
 									'addclasses': []
 								}
