--- a/site/templates/twig/code-tables/msa/sysop/form/js/classes/Config.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/js/classes/Config.js.twig
@@ -16,6 +16,9 @@ class SysopConfig {
 			description: {
 				maxlength: {{ sysop.fieldAttribute('description', 'maxlength') }}
 			},
+			notecode: {
+				maxlength: {{ sysop.fieldAttribute('notecode', 'maxlength') }}
+			},
 		};
 		this.keyDelimiter = '{{ sysop.recordlocker.glue() }}';
 	}
