--- a/site/templates/twig/code-tables/msa/sysop/form/js/classes/Inputs.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/js/classes/Inputs.js.twig
@@ -17,5 +17,6 @@ class SysopInputs {
 		this.fieldtype     = this.form.find('select[name=fieldtype]');
 		this.afterdecimal  = this.form.find('input[name=afterdecimal]');
 		this.beforedecimal = this.form.find('input[name=beforedecimal]');
+		this.notecode      = this.form.find('input[name=notecode]');
 	}
 }
