--- a/site/templates/twig/code-tables/msa/sysop/form/web.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/web.twig
@@ -35,7 +35,10 @@
 			{% include 'util/bootstrap/form/input.twig' with {
 					'input': {
 						'name': 'docfolder',
-						'value': code.docfolder
+						'value': code.docfolder,
+						'attributes': {
+							'readonly': code.filename() == false
+						}
 					}
 				}
 			%}
