Add twig documentation

--- a/site/templates/twig/code-tables/msa/sysop/form/field-type.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/field-type.twig
@@ -1,4 +1,10 @@
-<!-- if field type = 'N' -->
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	sysop                  Dplus\Codes\Msa\Sysop
+	code                   MsaSysopCode
+#}
 <div class="row">
 	<div class="col-sm-4">
 		<div class="form-group">
