--- a/site/templates/twig/code-tables/msa/sysop/form/js/classes/Config.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/js/classes/Config.js.twig
@@ -1,3 +1,8 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	sysop                  Dplus\Codes\Msa\Sysop
+#}
 class SysopConfig {
 	static instance = null;
 
