--- a/site/templates/twig/code-tables/msa/sysop/form/js/classes/Requests.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/js/classes/Requests.js.twig
@@ -1,3 +1,8 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+#}
 class SysopRequests {
 	static instance = null;
 
