--- a/site/templates/twig/code-tables/msa/sysop/form/yn-fields.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/yn-fields.twig
@@ -1,3 +1,10 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	sysop                  Dplus\Codes\Msa\Sysop
+	code                   MsaSysopCode
+#}
 <div class="row">
 	<div class="col-sm-3">
 		<div class="form-group">
