FIX: use readonly not disabled

--- a/site/templates/twig/code-tables/msa/sysop/form/key.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/key.twig
@@ -27,7 +27,7 @@
 					'value': code.code,
 					'attributes': {
 						'maxlength': sysop.fieldAttribute('code', 'maxlength'),
-						'disabled': code.id != '',
+						'readonly': code.id != '',
 						'autofocus': code.id == '',
 					}
 				}
