--- a/site/templates/twig/code-tables/msa/sysop/list.twig
+++ b/site/templates/twig/code-tables/msa/sysop/list.twig
@@ -2,8 +2,10 @@
 	var                    Description / Instance of
 	-------------------------------------------------
 	page                   ProcessWire\Page
-	manager                Dplus\Codes\Msa\Sysop
+	sysop                 Dplus\Codes\Msa\Sysop
 #}
+{% set response = sysop.getResponse() %}
+
 <table class="table table-sm">
 	<thead>
 		<tr class="bg-dark text-white">
@@ -26,7 +28,7 @@
 	<tbody>
 		{% for code in codes %}
 			{# data-code attribute and class code is for the highlight on close #}
-			<tr id="{{ code.system }}-{{ code.code|urlencode }}" data-code="{{ code.system }}-{{ code.code|urlencode }}" class="code {{ (response.key == (code.system ~ '-' ~ code.code) and response.has_success() ) ? 'bg-success text-white' : ''}}">
+			<tr data-code="{{ sysop.getRecordlockerKey(code) }}" class="code {{ (response.key == (sysop.getRecordlockerKey(code)) and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
 				<td>{{ code.system }}</td>
 				<td>{{ code.code }}</td>
 				<td>{{ code.description }}</td>
@@ -36,7 +38,7 @@
 				<td>{{ code.list_seq == 0 ? '' : code.list_seq }}</td>
 				<td>
 					{% if page.is_print() == false %}
-						{% if manager.recordlocker.isLocked(manager.getRecordlockerKey(code)) == false or manager.recordlocker.userHasLocked(manager.getRecordlockerKey(code)) %}
+						{% if sysop.recordlocker.isLocked(sysop.getRecordlockerKey(code)) == false or sysop.recordlocker.userHasLocked(sysop.getRecordlockerKey(code)) %}
 							<a href="{{ page.codeEditUrl(code.system, code.code) }}" class="btn btn-warning btn-sm">
 								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 							</a>
