--- a/site/templates/twig/code-tables/msa/sysop/list.twig
+++ b/site/templates/twig/code-tables/msa/sysop/list.twig
@@ -46,6 +46,10 @@
 							<a href="{{ page.codeDeleteUrl(code.system, code.code) }}" class="btn btn-danger btn-sm delete_button">
 								<i class="fa fa-trash" aria-hidden="true"></i> Delete
 							</a>
+						{% else %}
+							<span class="badge badge-secondary">
+								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ sysop.recordlocker.getLockingUser(sysop.getRecordlockerKey(code)) }}
+							</span>
 						{% endif %}
 					{% endif %}
 				</td>
