--- a/site/templates/twig/dplus-menu/function-menu.twig
+++ b/site/templates/twig/dplus-menu/function-menu.twig
@@ -17,7 +17,7 @@
 	{% if segments|length %}
 		{% set title = page.dplus_function ? page.dplus_function|upper : page.title %}
 		{% set title = page.wire('hooks').isHooked('Page::menuTitle()') ? page.menuTitle() : title %}
-		
+
 		<a href="{{ page.url }}" class="btn btn-primary">
 			<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
 			Back to {{ title }}
@@ -30,8 +30,11 @@
 		<a href="{{ page.subfunctionUrl(key) }}" class="list-group-item list-group-item-action">
 			<div class="row align-items-center">
 				<div class="col-4">
-					<i class="fa fa-microchip" aria-hidden="true"></i> &nbsp; &nbsp;
-					<strong>{{ function.title }} ({{ function.permission }})</strong>
+					<i class="fa fa-microchip" aria-hidden="true"></i>
+					&nbsp; &nbsp;
+					<strong>
+						{{ function.title }} {% if function.permission %} ({{ function.permission }}) {% endif %}
+					</strong>
 					<br>
 				</div>
 				<div class="col-8">
