--- a/site/templates/twig/sales-orders/sales-order/items.twig
+++ b/site/templates/twig/sales-orders/sales-order/items.twig
@@ -22,7 +22,7 @@
 		</tr>
 	</thead>
 	{% for detail in order.items %}
-		<tr>
+		<tr class="border-top border-dark border-3">
 			<td colspan="2">
 				<a href="{{ page.iiUrl(detail.itemid)}}" class="link" target="_blank" aria-label="View item in II" title="View item in II">
 					{{ detail.itemid }}
