--- a/site/templates/twig/sales-orders/sales-order/provalley/items.twig
+++ b/site/templates/twig/sales-orders/sales-order/provalley/items.twig
@@ -24,7 +24,7 @@
 	</thead>
 
 	{% for detail in order.items %}
-		<tr>
+		<tr class="border-top border-dark border-3">
 			<td>
 				<a href="{{ page.iiUrl(detail.itemid)}}" class="link" target="_blank" aria-label="View item in II" title="View item in II">
 					{{ detail.itemid }}
