--- a/site/templates/twig/items/ii/purchase-orders/purchase-orders.twig
+++ b/site/templates/twig/items/ii/purchase-orders/purchase-orders.twig
@@ -48,7 +48,7 @@
 										{{ formatter.format_celldata(order, column) }} &nbsp;
 
 										{% if order['Order Number'] and column['id'] == 'Order Number' %}
-											{% if docm.count_documents_po(order['Order Number']) %}
+											{% if docm.countDocumentsPo(order['Order Number']) %}
 												<a href="{{ page.documentListUrl(item.itemid, order['Order Number'])}}" class="text-success" title="View Documents for PO # {{ order['Order Number'] }}">
 													<i class="fa fa-file-text" aria-hidden="true"></i> <span class="sr-only">View Documents for PO # {{ order['Order Number'] }}</span>
 												</a>
