--- a/site/templates/twig/mvi/vio/form/form.twig
+++ b/site/templates/twig/mvi/vio/form/form.twig
@@ -1,6 +1,6 @@
 <form action="{{ input.url() }}" id="vio-user-form" method="POST">
 	<input type="hidden" name="action" value="update">
-	
+
 	<div class="mb-3">
 		{% include 'mvi/vio/form/key.twig' %}
 	</div>
@@ -26,12 +26,12 @@
 			</button>
 
 			{% if user.isNew() == false %}
-				<a href="{# page.vio_deleteURL(user.userid) #}" class="btn btn-danger delete_button">
+				<a href="{{ page.vioDeleteUrl(user.userid) }}" class="btn btn-danger delete_button">
 					<i class="fa fa-trash" aria-hidden="true"></i> Delete
 				</a>
 			{% endif %}
 		{% endif %}
-		<a href="{{ page.url }}" class="btn btn-warning">
+		<a href="{{ input.url() }}" class="btn btn-warning">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</a>
 	</div>
