Add last user print job

--- a/site/templates/twig/warehouse/inventory/mlot/labels/lotserial/display.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/labels/lotserial/display.twig
@@ -4,6 +4,7 @@
 	page                   ProcessWire\Page
 	lot                    InvLot
 	docm                   Dplus\DocManagement\Finders\Lt\Img
+	lastPrintJob           UserLastPrintJob
 #}
 
 <div class="card">
