--- a/site/templates/twig/purchase-orders/invoices/invoice/header.twig
+++ b/site/templates/twig/purchase-orders/invoices/invoice/header.twig
@@ -51,7 +51,7 @@
 				<div class="row">
 					<div class="col-sm-5">PO #:</div>
 					<div class="col-sm-7 text-right">
-						<a href="{{ page.view_purchaseorderURL(invoice.ponbr) }}" class="link" aria-label="View Purchase Order # {{ invoice.ponbr }}" title="View Purchase Order # {{ invoice.ponbr }}">
+						<a href="{{ page.poUrl(invoice.ponbr) }}" class="link" aria-label="View Purchase Order # {{ invoice.ponbr }}" title="View Purchase Order # {{ invoice.ponbr }}">
 							{{ invoice.ponbr }}
 						</a>
 					</div>
