--- a/site/templates/twig/warehouse/inventory/mlot/labels/lotserial/display.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/labels/lotserial/display.twig
@@ -2,7 +2,7 @@
 	var                    Description / Instance of
 	-------------------------------------------------
 	page                   ProcessWire\Page
-	lot                    InvLot
+	lot                    InvLotMaster
 	docm                   Dplus\DocManagement\Finders\Lt\Img
 	lastPrintJob           UserLastPrintJob
 #}
