--- a/site/templates/twig/warehouse/inventory/mlot/labels/list/list.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/labels/list/list.twig
@@ -2,7 +2,7 @@
 	var                    Description / Instance of
 	-------------------------------------------------
 	page                   ProcessWire\Page
-	lots                   Propel\Runtime\Util\PropelModelPager (InvLot)
+	lots                   Propel\Runtime\Util\PropelModelPager (InvLotMaster)
 	docm                   Dplus\DocManagement\Finders\Lt\Img
 #}
 
