FIX: use clear option alert

--- a/site/templates/twig/items/itm/options/modal/notes/form.twig
+++ b/site/templates/twig/items/itm/options/modal/notes/form.twig
@@ -19,7 +19,7 @@
 		<button type="submit" class="btn btn-success form_button" name="action" value="update">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 		</button>
-		<button type="submit" class="btn btn-secondary delete_button" name="action" value="delete">
+		<button type="submit" class="btn btn-secondary clear-option" name="action" value="delete">
 			<i class="fa fa-eraser" aria-hidden="true"></i> Clear
 		</button>
 		<button type="button" class="btn btn-warning" data-dismiss="modal">
