--- a/site/templates/twig/items/itm/options/list.js.twig
+++ b/site/templates/twig/items/itm/options/list.js.twig
@@ -21,4 +21,22 @@ $(function() {
 			}
 		});
 	});
+
+	$("body").on('click', 'button[type=submit].clear-option', function(e) {
+		e.preventDefault();
+		var button = $(this);
+
+		swal2.fire({
+			title: "Confirm Clear",
+			text: "Are you sure you want to Clear Option Value?",
+			icon: 'warning',
+			showCancelButton: true,
+			confirmButtonClass: 'btn btn-success',
+			cancelButtonClass: 'btn btn-danger',
+			buttonsStyling: false,
+			confirmButtonText: 'Yes'
+		}).then((result) => {
+			button.closest('form').submit();
+		});
+	});
 });
