FIX: update edit title

--- a/site/templates/twig/items/itm/options/js/classes/code/Inputs.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/code/Inputs.js.twig
@@ -15,6 +15,7 @@ class CodeInputs {
 		this.sysop         = this.form.find('input[name=sysop]');
 		this.code          = this.form.find('input[name=code]');
 		this.description   = this.form.find('.code-description');
+		this.descriptionSysop   = this.form.find('.sysop-description');
 		this.submit = {
 			delete: this.form.find('button[type=submit][value=delete]'),
 			update: this.form.find('button[type=submit][value=update]'),
