--- a/site/templates/twig/items/itm/options/js/classes/note/Form.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/note/Form.js.twig
@@ -18,7 +18,7 @@ class NoteForm {
 
 	updateFormFromJson(json = null) {
 		var modal = this.form.closest('.modal');
-		var pieces = ['Editing', this.inputs.itemid.val(), json.description, 'notes'];
+		var pieces = ['Editing', this.inputs.itemid.val(), json.description, '('+ json.sysop +')', 'notes'];
 		modal.find('.modal-title').text(pieces.join(' '));
 		modal.find('.notetype').text(json.sysop);
 		modal.find('.sysopdesc').text(json.description);
