Only submit clear if the ok is clicked

--- a/site/templates/twig/items/itm/options/list.js.twig
+++ b/site/templates/twig/items/itm/options/list.js.twig
@@ -36,7 +36,9 @@ $(function() {
 			buttonsStyling: false,
 			confirmButtonText: 'Yes'
 		}).then((result) => {
-			button.closest('form').submit();
+			if (result.value) {
+				button.closest('form').submit();
+			}
 		});
 	});
 });
