--- a/site/templates/twig/items/itm/options/list.twig
+++ b/site/templates/twig/items/itm/options/list.twig
@@ -62,7 +62,7 @@
 								</button>
 							{% endif %}
 							&nbsp; &nbsp;
-							<a href="{{ page.optionDeleteUrl(item.itemid, option.id) }}" class="btn btn-secondary btn-sm clear-option">
+							<a href="{{ page.optionDeleteUrl(item.itemid, option.id) }}" class="btn btn-secondary btn-sm clear-option text-white">
 								<i class="fa fa-eraser" aria-hidden="true"></i> Clear
 							</a>
 						{% endif %}
