--- a/site/templates/twig/items/itm/options/js/classes/Config.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/Config.js.twig
@@ -20,5 +20,8 @@ class CodeConfigs {
 
 		};
 		this.isMissingRequired = {{ itmOpt.isMissingRequiredCodes(input.get.text('itemID')) ? 'true' : 'false'}};
+		this.missingCodes = {
+			urls: {{ page.missingRequiredCodesUrls(input.get.text('itemID'))|json_encode|raw }}
+		}
 	}
 }
