--- a/site/templates/twig/mar/armain/roptm/list/list.twig
+++ b/site/templates/twig/mar/armain/roptm/list/list.twig
@@ -6,11 +6,7 @@
 			<th class="pt-3 pb-3">Validate</th>
 			<th class="pt-3 pb-3">Force</th>
 			<th class="pt-3 pb-3">Note Seq</th>
-			<th class="pt-3 pb-3 text-center">
-				<a href="{{ page.codeAddUrl() }}" class="btn btn-light btn-sm">
-					<i class="fa fa-plus" aria-hidden="true"></i> Add
-				</a>
-			</th>
+			<th class="pt-3 pb-3 text-center"></th>
 		</tr>
 	</thead>
 	<tbody>
@@ -30,17 +26,13 @@
 				<td>{{ code.force|yesorno|capitalize }}</td>
 				<td>{{ code.notecode }}</td>
 				<td class="text-center">
-					{% if sysop.recordlocker.isLocked(sysop.getRecordlockerKey(code)) == false or sysop.recordlocker.userHasLocked(sysop.getRecordlockerKey(code)) %}
-						<a href="{{ page.codeEditUrl(code.id) }}" class="btn btn-warning btn-sm">
+					{% if sysopM.recordlocker.isLocked(sysopM.getRecordlockerKey(code)) == false or sysopM.recordlocker.userHasLocked(sysopM.getRecordlockerKey(code)) %}
+						<a href="{{ page.sysopUrl(code.id) }}" class="btn btn-warning btn-sm">
 							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</a>
-						&nbsp; &nbsp;
-						<a href="{{ page.codeDeleteUrl(code.id) }}" class="btn btn-danger btn-sm delete_button" data-delete="Code {{ code.id }}">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
 						</a>
 					{% else %}
 						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ sysop.recordlocker.getLockingUser(sysop.getRecordlockerKey(code)) }}
+							<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ sysopM.recordlocker.getLockingUser(sysopM.getRecordlockerKey(code)) }}
 						</span>
 					{% endif %}
 				</td>
