--- a/site/templates/twig/mar/armain/roptm/sysop/edit/form.twig
+++ b/site/templates/twig/mar/armain/roptm/sysop/edit/form.twig
@@ -7,7 +7,6 @@
 
 {# data-code is for verifying edit vs new #}
 <form action="{{ input.paginateUrl(1) }}" method="POST" id="code-form" data-sysop="" data-code="">
-	<input type="hidden" name="action" value="update">
 	<input type="hidden" name="sysop" value="">
 
 	<div class="form-group">
@@ -21,8 +20,11 @@
 	</div>
 
 	<div class="d-flex justify-content-between align-items-center">
-		<button type="submit" class="btn btn-success form_button">
+		<button type="submit" class="btn btn-success" name="action" value="update">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
+		</button>
+		<button type="submit" class="btn btn-danger delete_button" name="action" value="delete">
+			<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
 		</button>
 		<button type="button" class="btn btn-warning" data-dismiss="modal">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
