--- a/site/templates/twig/mar/armain/roptm/sysop/list/list.twig
+++ b/site/templates/twig/mar/armain/roptm/sysop/list/list.twig
@@ -4,9 +4,9 @@
 			<th class="pt-3 pb-3">Code</th>
 			<th class="pt-3 pb-3">Description</th>
 			<th class="pt-3 pb-3 text-right">
-				<a href="{#{ page.codeAddUrl(code.code) #}" class="btn btn-light btn-sm">
+				<button class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-json="">
 					<i class="fa fa-plus" aria-hidden="true"></i> Add
-				</a>
+				</button>
 			</th>
 		</tr>
 	</thead>
@@ -24,7 +24,7 @@
 				<td>{{ code.id }}</td>
 				<td>{{ code.description }}</td>
 				<td class="text-right">
-					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
+					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ roptm.codeJson(code)|json_encode }}">
 						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 					</button>
 					&nbsp; &nbsp;
